Fixed Saving Config and fixed spacing

--- a/css/configStyle.css
+++ b/css/configStyle.css
@@ -150,3 +150,8 @@ input:checked + .slider:before {
 .disabled {
   color: red;
 }
+
+#menu folder::after,event::after{
+  content: "\a";
+  white-space: pre;
+}
