--- a/css/panelStyle.css
+++ b/css/panelStyle.css
@@ -190,3 +190,8 @@ input:checked + .slider:before {
   0% { transform: translate(-50%,-50%) rotate(0deg); }
   100% { transform: translate(-50%,-50%) rotate(360deg); }
 }
+
+#menu folder::after,event::after{
+  content: "\a";
+  white-space: pre;
+}
